<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.login_fragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
       >
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/app_name"
android:textSize="30dp"

            />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtphone"
            android:hint="@string/phone_number"
            android:ellipsize="start"
            android:gravity="center_horizontal"/>

        <EditText
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtpass"
            android:hint="@string/pass"/>

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btnlognin" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/register"
            android:id="@+id/txtsignin"
            android:ellipsize="start"
            android:clickable="true"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/forgetpass"
            android:id="@+id/textView2"
            android:ellipsize="start"
            android:gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>
