<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usersfiles.google_project.add_post"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
       android:layout_weight="2"
        android:id="@+id/scrollView2" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >
            <EditText
                android:inputType="textMultiLine"
                android:lines="10"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:scrollbars="vertical"
                android:id="@+id/txtpost"
                android:hint="@string/post"
                android:ellipsize="start"
                android:gravity="center_horizontal"/>
        </ScrollView>
    </ScrollView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/image_post"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loadimage"
            android:id="@+id/btnloadimage" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnpost"
            android:id="@+id/btnpost" />
    </LinearLayout>

</LinearLayout>
